java: fixes and cleanup